Put header on one line, fix how donate button shows on mobile

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -20,8 +20,8 @@ $blog-color: #FF99CA;
 $blog-hover: #F7C3DC;
 $join-color: #FFB499;
 $join-hover: #F3CFC1;
-$support-color: #FDFF99;
-$support-hover: #EEEFC0;
+$support-color: #ffdc00;
+$support-hover: #f3de60;
 
 /*
 // RGB gradient navbar
@@ -98,7 +98,10 @@ a:visited {
   text-decoration: none;
 }
 
-.main,
+.main {
+  padding: 5px 40px 40px 40px;
+}
+
 .footer {
   padding: 40px;
 }
@@ -106,6 +109,7 @@ a:visited {
 .header {
   padding: 0px 30px 25px 30px;
   text-align: center;
+  width: 35%;
 }
 
 .main {
@@ -165,7 +169,7 @@ img#logo {
 }
 
 .navbar {
-  margin: 0 auto;
+
 }
 .navbar div {
   font-family: $font-headline;
@@ -173,6 +177,10 @@ img#logo {
   font-size: 1.7em;
   float: left;
   text-align:center;
+}
+
+.navbar .nav-item {
+  padding-top: 12px;
 }
 
 .navbar div#home.active {
@@ -331,15 +339,29 @@ img.bio {
   width: 100%;
 }
 
-.post-donate {
-  display: flex;
-  flex-direction: row;
+@media screen and (max-width: 768px) {
+  .post-donate {
+    display: flex;
+    flex-direction: column;
+  }
+  .post-donate-button {
+    padding: 20px;
+    margin: auto;
+  }
 }
 
-.post-donate-button {
-  width: 25%;
-  padding: 20px;
+
+@media screen and (min-width: 768px) {
+  .post-donate {
+    display: flex;
+    flex-direction: row;
+  }
+  .post-donate-button {
+    width: 25%;
+    padding: 20px;
+  }
 }
+
 
 .post-donate-message {
   text-align: left;
@@ -361,22 +383,30 @@ img.bio {
   overflow: hidden;
 }
 
-.post-content-preview {
-  display: flex;
-  flex-direction: row;
+@media screen and (max-width: 768px) {
+  .post-content-preview {
+    display: flex;
+    flex-direction: column;
+  }
+  .post-image {
+    width: 100%;
+    margin-left: 10px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .post-content-preview {
+    display: flex;
+    flex-direction: row;
+  }
+  .post-image {
+    width: 100%;
+    margin-left: 10px;
+  }
 }
 
 .post-content-preview .post-image img {
   width: 100%;
-}
-
-.post-excerpt {
-
-}
-
-.post-image {
-  max-width: 35%;
-  margin-left: 10px;
 }
 
 .post-title {
@@ -395,3 +425,10 @@ img.bio {
   font-size: 0.8em;
   margin-bottom: 10px;
 }
+
+
+.header-and-navbar {
+  display: flex;
+  flex-direction: row;
+}
+
